Code cleanup pt3